fix: improve panel background contrast and adjust min width logic for browser elements

--- a/src/browser/base/content/zen-styles/zen-panel-ui.css
+++ b/src/browser/base/content/zen-styles/zen-panel-ui.css
@@ -25,7 +25,7 @@ panel {
     -moz-default-appearance: menupopup;
     /* The blur behind doesn't blur all that much, add a semi-transparent
      * background to improve contrast */
-    --panel-background: light-dark(rgba(255, 255, 255, .5), rgba(0, 0, 0, .5)) !important;
+    --panel-background: light-dark(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)) !important;
     --panel-border-color: transparent !important;
     --panel-shadow-margin: 0px !important;
   }
